PORTAL-1311: resolve spotbug issues